// Copyright 2019 Zeppelin Bend Pty Ltd
// This file is part of cimbend.
// 
// cimbend is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
// 
// cimbend is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.
// 
// You should have received a copy of the GNU Affero General Public License
// along with cimbend.  If not, see <https://www.gnu.org/licenses/>.


syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.zepben.protobuf.cim.iec61970.base.core";
package zepben.cim.iec61970.base.core;

import "zepben/cim/iec61970/base/core/PhaseCode.proto";
import "zepben/cim/iec61970/base/wires/Direction.proto";
import "zepben/cim/iec61970/base/diagramlayout/DiagramObject.proto";

/**
 * An AC electrical connection point to a piece of conducting equipment. Terminals are connected at physical connection points called connectivity nodes.
 */
message Terminal {

    /**
     * Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness
     * is easily achieved by using a UUID,  as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
     * <p>
     * For CIMXML data files in RDF syntax conforming to IEC 61970-552 Edition 1, the mRID is mapped to rdf:ID or rdf:about attributes
     * that identify CIM object elements.
     */
    string mRID = 1;

    /**
     * The name is any free human readable and possibly non unique text naming the object.
     */
    string name = 2;

    /**
     * The connected status is related to a bus-branch model and the topological node to terminal relation.
     * True implies the terminal is connected to the related topological node and false implies it is not.
     * In a bus-branch model, the connected status is used to tell if equipment is disconnected without having to change
     * the connectivity described by the topological node to terminal relation. A valid case is that conducting
     * equipment can be connected in one end and open in the other. In particular for an AC line segment,
     * where the reactive line charging can be significant, this is a relevant case.
     */
    bool connected = 3;

    /**
     * The connectivity node to which this terminal connects with zero impedance.
     */
    string connectivityNodeMRID = 4;

    /**
     * Represents the normal network phasing condition.
     * <p>
     * If the attribute is missing three phases (ABC or ABCN) shall be assumed.
     */
    iec61970.base.core.PhaseCode phases = 5;

    /**
     * Nominal Direction for each phase of this terminal.
     * Note: Direction is relative to the primary EnergySource in the network.
     */
    repeated iec61970.base.wires.direction.Direction direction = 6;

    /**
     * The diagram objects that are associated with the domain object.
     * <p>
     * The diagram objects are returned in a map sorted by the diagram they live in.
     */
    repeated iec61970.base.diagramlayout.DiagramObject diagramObjects = 16;

}
